# Metryxonefinal-clean

./: .gitattributes  .gitignore  .replit  CareerBuilder_Document.md  CompetitiveExam_Document.md  DATABASE_INVENTORY.md  InstitutionDashboard_Document.md  Mentor_Document.md  ParentDashboard_Document.md  StudentDashboard_Document.md  audited_capadex_concerns.csv  audited_domains.csv  audited_families.csv  audited_signals.csv  competency_quality_report.md  metryxone_dump.sql  pyproject.toml  replit.md  ritten  shared
.agents/: agent_assets_metadata.toml
.emergent/: emergent.yml
attached_assets/: Clarity_import1_1780414191756.xlsx  Domain_List_1779966408305.xlsx  Family_List_1779966408303.xlsx  Pasted--1-Cross-report-longitudinal-narrative-What-s-missing-C_1781251989980.txt  Pasted--347-Phase-3-1-Assessment-Architecture-What-Why-CAPADEX_1782885549589.txt  Pasted--CAPADEX-2-0--1782660947307_1782660947308.txt  Pasted--CAPADEX-2-0--1782662670175_1782662670176.txt  Pasted--CAPADEX-2-0--1782663337901_1782663337901.txt  Pasted--CAPADEX-2-0-E-1782631580857_1782631580858.txt  Pasted--CAPADEX-2-0-E-1782631920336_1782631920337.txt  Pasted--CAPADEX-2-0-E-1782645900599_1782645900599.txt  Pasted--CAPADEX-2-0-E-1782646212415_1782646212416.txt  Pasted--CAPADEX-2-0-E-1782646651254_1782646651255.txt  Pasted--CAPADEX-2-0-E-1782647001202_1782647001203.txt  Pasted--CAPADEX-2-0-E-1782648063858_1782648063858.txt  Pasted--CAPADEX-2-0-E-1782648866550_1782648866551.txt  Pasted--CAPADEX-2-0-E-1782649517889_1782649517889.txt  Pasted--CAPADEX-2-0-E-1782649832352_1782649832353.txt  (+223 more)
(+5994 files in other folders)
